Removing the unsed modules
This is to make sure we don't need to build the other modules like workbench

--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,7 @@
         <module>mondrian</module>
       </modules>
     </profile>
+    <!--
     <profile>
       <id>workbench</id>
       <activation>
@@ -78,7 +79,7 @@
       <modules>
         <module>assemblies</module>
       </modules>
-    </profile>
+    </profile> -->
   </profiles>
 
   <repositories>
